--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ chrono = "*"
 http = "*"
 rocket-client-addr = "0.4.3"
 tokio = { version = "*", features = ["full"] }
+wasm-bindgen = "*"
 
 [dependencies.rocket_contrib]
 version = "*"
