--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "style-loader": "^1.1.3",
+    "svg-loader": "0.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "~3.7.2",
+    "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack --mode development",
     "start-server": "cargo run",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "webpack-start": "webpack --mode development",
+    "webpack-build": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
