--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql://root:qe44@wwds!!@localhost/premid
+DATABASE_URL=mysql://[mysqlaccount]:[mysqlPassword]@[mysqlAddress]/[mysqlDatabaseName]
